<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.htlhl.tourismus_hl.RoutenMapFullscreen"
    android:id="@+id/layout_fullscreen_map">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fullscreen_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/ImgBtnPoiFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/ImgBtnPOI" />

            <ImageButton
                android:id="@+id/ImgBtnFullscreenFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImgBtnPoiFull"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:contentDescription="@string/ImgBtnFullscreen"/>

            <ImageButton
                android:id="@+id/ImgBtnLocationFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImgBtnFullscreenFull"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:contentDescription="@string/imgBtnLocation"/>
        </RelativeLayout>
    </fragment>

</FrameLayout>
