<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutAudioplayerFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border">

    <RelativeLayout
        android:id="@+id/LayoutRadwege"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btnRadwege"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right_white_18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/LayoutRadwege"
        android:id="@+id/LayoutWanderwege"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btnWanderwege"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right_white_18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/LayoutWanderwege"
        android:id="@+id/LayoutKellergassenlauf"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btnLaufstrecke"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right_white_18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </RelativeLayout>


</RelativeLayout>