<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.htlhl.tourismus_hl_old.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/relativeLayoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/Kellergassenlogo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/ButtonKellergasse"
            android:onClick="toKellerkatze"
            android:src="@drawable/kellerkatzen_logo" />

        <Button
            android:id="@+id/btnToKellergasse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Kellergassenlogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/roundbutton"
            android:onClick="toKellerkatze"
            android:text="@string/ButtonKellergasse"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/Routenlogo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_below="@id/btnToKellergasse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/ButtonRoute"
            android:onClick="toRouten"
            android:src="@drawable/routen_logo_wlr" />

        <Button
            android:id="@+id/btnToRouten"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Routenlogo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundbutton"
            android:layout_marginTop="12dp"
            android:onClick="toRouten"
            android:text="@string/ButtonRoute"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/lang_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            fab:menu_fab_size="normal">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/lang_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/lang_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

        <TextView
            android:id="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/chooseLanguage"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnToImpressum"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:text="@string/ButtonImpressum"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
