<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlStation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.htlhl.tourismus_hl_old.KellerkatzeStation"
    tools:showIn="@layout/activity_kellerkatze_station">

    <fragment
        android:id="@+id/AudioplayerFragment"
        android:name="com.htlhl.tourismus_hl_old.FragmentAudioplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp" />

    <fragment
        android:id="@+id/CodeFragment"
        android:name="com.htlhl.tourismus_hl_old.FragmentStationcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/ImgViewStation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/contentStationBild" />


    <RelativeLayout
        android:id="@+id/LayoutMiddleStation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/LayoutBtnNextStation"
        android:layout_below="@id/ImgViewStation"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp">

        <FrameLayout
            android:id="@+id/LayoutHeaderStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHeaderStation"
                style="@style/Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:textAlignment="center"
                android:textColor="@color/KG_green" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/LayoutTextStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LayoutHeaderStation">

            <TextView
                android:id="@+id/tvTextStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </FrameLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/LayoutBtnNextStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LayoutAudioStation">

        <Button
            android:id="@+id/btnNextStation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundbutton"
            android:text="@string/btnNextStation"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/LayoutAudioStation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAudioPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/Audiodatei"
            android:textAlignment="center"
            android:textColor="@color/KG_green"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/ImgBtnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/contentPlayImgBtn"
            android:src="@drawable/ic_play_arrow_black_36dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/langAudio_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            fab:menu_fab_size="normal">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/langAudio_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/langAudio_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

        <TextView
            android:id="@+id/tvLangAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxWidth="105dp"
            android:minWidth="56dp"
            android:text="@string/chooseLanguageAudio"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
